<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/nav_group_main">
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_music_note"
            android:title="@string/songs" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_artist"
            android:title="@string/artists" />
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_album_default"
            android:title="@string/albums" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_queue_music"
            android:title="@string/playlists" />
        <item
            android:id="@+id/nav_other_audio"
            android:icon="@drawable/ic_other_audio"
            android:title="@string/other_audio" />
        <item
            android:id="@+id/nav_folders"
            android:icon="@drawable/ic_folder"
            android:title="@string/folders" />
        <item
            android:id="@+id/nav_system_picker"
            android:icon="@drawable/ic_system_picker"
            android:title="@string/system_picker" />
    </group>
    <group android:id="@+id/nav_group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>
